# SyncDex

./: .gitignore  README.md  code.ipynb  docker-compose.yaml  ingest.py  main.py  pyproject.toml
app/: chunk_level_sync_manager.py  data_structures.py  doc_level_sql_record_manager.py  doc_level_sync_manager.py  runs.py
app/routers/: chunk_router.py  document_router.py
raw_data/: doc_1.txt  doc_100.txt  doc_101.txt  doc_102.txt  doc_103.txt  doc_104.txt  doc_105.txt  doc_106.txt  doc_107.txt  doc_108.txt  doc_109.txt  doc_110.txt  doc_111.txt  doc_112.txt  doc_113.txt  doc_114.txt  doc_115.txt  doc_116.txt  doc_117.txt  doc_118.txt  doc_119.txt  doc_12.txt  doc_120.txt  doc_121.txt  doc_122.txt  doc_123.txt  doc_124.txt  doc_125.txt  doc_126.txt  doc_127.txt  doc_128.txt  doc_129.txt  doc_13.txt  doc_130.txt  doc_131.txt  doc_132.txt  doc_133.txt  doc_134.txt  doc_135.txt  doc_136.txt  (+454 more)
