[project]
name = "syncdex"
version = "0.0.1"
description = "Index Documents for RAG in batches"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.23",
    "langchain-chroma>=0.2.2",
    "langchain-community>=0.3.21",
    "langchain-core>=0.3.51",
    "langchain-postgres>=0.0.14",
    "psycopg[binary]>=3.2.7",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
